[package]
name = "mina"
version = "0.1.0"
authors = ["Luke Taylor <tekul.hs@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
csv = "1.1.3"
reqwest = { version = "0.10", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
tui = "0.12"
termion = "1.5"
